--- a/index.html
+++ b/index.html
@@ -297,11 +297,10 @@
                                 </iframe>
 
 
-                                        <video width="1100" controls>
-                                        <source src="C:\Users\Dogukan\Desktop" type="video/mp4">
-                                        Tarayıcınız video etiketini desteklemiyor.
+                                        <video width="640" controls>
+                                          <source src="girişim.mp4" type="video/mp4">
+                                          Tarayıcınız video etiketini desteklemiyor.
                                         </video>
-
 
                             </div>
                         </div>
