--- a/index.html
+++ b/index.html
@@ -236,24 +236,27 @@
                     routerContent.innerHTML = `
                         <h1>Hoş Geldiniz</h1>
                         <div class="slider">
-                            <div class="slide active" style="background-image: url('https://via.placeholder.com/1200x400?text=Slider+1');">
-                                <div class="slide-content">
-                                    <h2>Profesyonel Çözümler</h2>
-                                    <p>İşiniz için en iyi çözümleri sunuyoruz</p>
+                           <div class="slider">
+                                <div class="slide active" style="background-image: url('resimler/1.png');">
+                                    <div class="slide-content">
+                                        <h2>Başlık 1</h2>
+                                        <p>Açıklama 1</p>
+                                    </div>
+                                </div>
+                                <div class="slide" style="background-image: url('resimler/2.png');">
+                                    <div class="slide-content">
+                                        <h2>Başlık 2</h2>
+                                        <p>Açıklama 2</p>
+                                    </div>
+                                </div>
+                                <div class="slide" style="background-image: url('resimler/3.png');">
+                                    <div class="slide-content">
+                                        <h2>Başlık 3</h2>
+                                        <p>Açıklama 3</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="slide" style="background-image: url('https://via.placeholder.com/1200x400?text=Slider+2');">
-                                <div class="slide-content">
-                                    <h2>Kaliteli Ürünler</h2>
-                                    <p>En kaliteli ürünlerle hizmetinizdeyiz</p>
-                                </div>
-                            </div>
-                            <div class="slide" style="background-image: url('https://via.placeholder.com/1200x400?text=Slider+3');">
-                                <div class="slide-content">
-                                    <h2>Müşteri Memnuniyeti</h2>
-                                    <p>Müşterilerimizin memnuniyeti önceliğimizdir</p>
-                                </div>
-                            </div>
+
                         </div>
                         <div style="padding: 20px;">
                             <p>Şirketimiz sektöründe lider firmalardan biridir. Müşteri memnuniyeti odaklı hizmet anlayışımız ve kaliteli ürünlerimizle sektörde öne çıkıyoruz.</p>
