--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                            <div class="slider">
                                 <div class="slide active" style="background-image: url('resimler/1.png');">
                                     <div class="slide-content">
-                                        <h2>Başlık 1</h2>
+                                        <h2>yaz contenti</h2>
                                         <p>Açıklama 1</p>
                                     </div>
                                 </div>
@@ -296,12 +296,6 @@
                                         loading="lazy" 
                                         referrerpolicy="no-referrer-when-downgrade">
                                 </iframe>
-
-
-                                        <video width="640" controls>
-                                          <source src="girişim.mp4" type="video/mp4">
-                                          Tarayıcınız video etiketini desteklemiyor.
-                                        </video>
 
                             </div>
                         </div>
